--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package-app-boilerplate",
+  "name": "@kuhltime/package-app-boilerplate",
   "version": "1.0.0",
   "description": "",
   "type": "module",
