--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "./dist/package"
   ],
   "scripts": {
+    "dev": "node --no-warnings --loader ts-node/esm src/app/index.ts",
     "start": "node dist/app/index.mjs",
     "build": "unbuild",
     "release": "semantic-release --debug"
