--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -15,5 +15,6 @@
     "declaration": true,
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
